# Equation-677-Database

./: .gitignore  README.md  package-lock.json  package.json  wrangler.toml
.github/workflows/: container.yml
container/: Cargo.toml  Dockerfile  README.md
container/canonicalize-server/: Cargo.toml
container/canonicalize-server/src/: main.rs
container/eq677/: Cargo.toml  build.rs
container/eq677/src/: lib.rs  main.rs
container/eq677/src/c_dpll/: run.rs
container/eq677/src/semitinv_dpll/: run.rs
container/eq677/src/tinv_dpll/: run.rs
migrations/: 0001_init.sql  0002_add_right_cancellative.sql  0003_add_idempotent.sql  0004_add_display_reorder.sql  0005_add_auth.sql  0006_add_api_tokens.sql  0007_add_comments.sql  0008_add_display_reorder_log.sql
public/: robots.txt  style.css
src/: auth.js  canonicalizer.js  index.js  magma.js  pages.js  png.js  tar.js
