[package]
name = "canonicalize-server"
version = "0.1.0"
edition = "2021"

[dependencies]
eq677 = { path = "../eq677" }
# Force the bundled nauty build so the container doesn't need libnauty from apt.
nauty-Traces-sys = { version = "0.11", features = ["bundled"] }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
